--- a/android/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/android/app/src/main/res/drawable/ic_launcher_background.xml
@@ -4,10 +4,19 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
+    <!-- Vibrant gradient background using ChoreQuest colors -->
+    <!-- Sky Blue to Purple gradient -->
     <path
-        android:fillColor="#4ECDC4"
+        android:fillColor="#4A90E2"
         android:pathData="M0,0h108v108h-108z" />
+    <!-- Gradient overlay -->
     <path
-        android:fillColor="#45B7D1"
-        android:pathData="M0,0 L108,108 L108,0 Z" />
+        android:fillColor="#9B59B6"
+        android:pathData="M0,0 L108,0 L108,108 L0,108 Z"
+        android:fillAlpha="0.6" />
+    <!-- Sunshine Yellow accent -->
+    <path
+        android:fillColor="#FFD93D"
+        android:pathData="M0,0 L108,54 L0,108 Z"
+        android:fillAlpha="0.3" />
 </vector>
