--- a/android/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/android/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -4,14 +4,32 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
+    <!-- Quest Badge/Shield Icon Design -->
     <group
-        android:scaleX="0.5"
-        android:scaleY="0.5"
-        android:translateX="27"
-        android:translateY="27">
-        <!-- Checkmark circle icon for chores -->
+        android:scaleX="0.7"
+        android:scaleY="0.7"
+        android:translateX="16.2"
+        android:translateY="16.2">
+        
+        <!-- Shield/Badge shape -->
         <path
             android:fillColor="#FFFFFF"
-            android:pathData="M54,18C33.072,18 16,35.072 16,56s17.072,38 38,38s38,-17.072 38,-38S74.928,18 54,18zM47.6,70.4L28,50.8l5.6,-5.6l14,14l28,-28l5.6,5.6L47.6,70.4z" />
+            android:pathData="M54,12 C40,12 28,18 28,28 L28,42 C28,52 40,58 54,70 C68,58 80,52 80,42 L80,28 C80,18 68,12 54,12 Z" />
+        
+        <!-- Inner highlight -->
+        <path
+            android:fillColor="#E8F4FD"
+            android:pathData="M54,16 C42,16 32,20 32,28 L32,42 C32,50 42,54 54,64 C66,54 76,50 76,42 L76,28 C76,20 66,16 54,16 Z" />
+        
+        <!-- Checkmark for completed chore (thick stroke) -->
+        <path
+            android:fillColor="#27AE60"
+            android:pathData="M42,38 L48,44 L66,26 L64,24 L48,40 L44,36 L40,40 Z" />
+        
+        <!-- Star decoration (quest theme) at top -->
+        <path
+            android:fillColor="#FFD93D"
+            android:pathData="M54,20 L56.5,26 L62,26 L57.5,29 L59.5,35 L54,31 L48.5,35 L50.5,29 L46,26 L51.5,26 Z" />
+        
     </group>
 </vector>
